// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match a definition with optionals 1`] = `
Object {
  "areas": Object {
    "optional_found": Array [],
    "value": Object {
      "entries": Array [
        Object {
          "key": Object {
            "property": "id",
          },
          "value": Object {
            "type_description": "hey",
          },
        },
      ],
    },
    "var": "result",
  },
}
`;

exports[`should match a definition with provided optionals 1`] = `
Object {
  "areas": Object {
    "optional_found": Array [
      "result.name = 'Cool';",
    ],
    "value": Object {
      "entries": Array [
        Object {
          "key": "id",
          "value": "hey",
        },
      ],
    },
    "var": "result",
  },
}
`;

exports[`should match a simple sequelize definition 1`] = `
Object {
  "areas": Object {
    "model": "Price",
    "model_definition": Object {
      "entries": Array [
        Object {
          "key": "id",
          "value": "{
  type: DataTypes.UUID,
  primaryKey: true,
  defaultValue: DataTypes.UUIDV4,
  allowNull: false,
  autoIncrement: false
}",
        },
        Object {
          "key": "shape",
          "value": "DataTypes.STRING",
        },
        Object {
          "key": "color",
          "value": "DataTypes.STRING",
        },
        Object {
          "key": "clarity",
          "value": "DataTypes.STRING",
        },
        Object {
          "key": "lowSize",
          "value": "DataTypes.DECIMAL",
        },
        Object {
          "key": "highSize",
          "value": "DataTypes.DECIMAL",
        },
        Object {
          "key": "caratPrice",
          "value": "DataTypes.DECIMAL",
        },
        Object {
          "key": "date",
          "value": "DataTypes.STRING",
        },
      ],
    },
    "model_name": "Price",
  },
}
`;

exports[`should match a single key: value entry 1`] = `
Object {
  "areas": Object {
    "key": "id",
    "type_description": "hey",
    "var": "result",
  },
}
`;

exports[`should match multiple expression 1`] = `
Object {
  "areas": Object {
    "expressions": Array [
      "let x = 10;",
      "let y = Math.random();",
      "let z = x * y;",
    ],
    "var": "z",
  },
}
`;
